--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "dependencies": {
     "electron": "^1.3.5",
-    "boostrap": "^3.3.0"
+    "electron-json-storage": "^2.0.0"
   },
   "build": {
     "appId": "howie20160910",
